Fixed alignement in testimonials.

--- a/static/css/objects.css
+++ b/static/css/objects.css
@@ -1463,3 +1463,7 @@ li.event-node{
   opacity: 0;
   }
 }
+.testimonials .context {
+  min-width: 300px;
+  max-width: 300px;
+}
